Make styles responsive
Minor changes

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -15,7 +15,7 @@
     <div class="chat-box">
         <div class="messages"></div>
         <div class="user-input">
-            <span class="input-carrot">> </span><input type="text">
+            <span class="input-carrot">> </span><input type="text" placeholder="Input a username">
         </div>
     </div>
 </body>
