--- a/app/client/index.html
+++ b/app/client/index.html
@@ -8,7 +8,7 @@
     <title>Chat Server</title>
 
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
 </head>
 
 <body>
