Refactor client input to use formelement

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -14,9 +14,11 @@
 <body>
     <div class="chat-box">
         <div class="messages"></div>
-        <div class="user-input">
-            <span class="input-carrot">> </span><input type="text" placeholder="Input a username">
-        </div>
+        <form class="user-input">
+            <span class="input-carrot">> </span>
+            <input type="text" placeholder="Input a username">
+            <input type="submit" value="Send">
+        </form>
     </div>
 </body>
 <script src="index.js"></script>
