--- a/app/client/index.html
+++ b/app/client/index.html
@@ -9,10 +9,12 @@
 
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Krub" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="chat-box">
+        <button class="reconnect fas fa-sync-alt"></button>
         <div class="messages"></div>
         <form class="user-input">
             <span class="input-carrot">> </span>
