--- a/app/client/index.html
+++ b/app/client/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:image" content="https://chat.huhspaniel.com/assets/opimage.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://chat.huhspaniel.com">
+    <meta property="og:title" content="Chat">
+    <meta property="og:description" content="Real-time chat server">
     <title>Chat</title>
 
     <link rel="stylesheet" href="index.css">
