Update open graph object

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -8,8 +8,7 @@
     <meta property="og:image" content="https://chat.huhspaniel.com/assets/op-image.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chat.huhspaniel.com">
-    <meta property="og:title" content="Chat">
-    <meta property="og:description" content="Real-time chat server">
+    <meta property="og:title" content="Real-Time Chat">
     <meta property="fb:app_id" content="406990946704820">
     <title>Chat</title>
 
