--- a/app/client/index.html
+++ b/app/client/index.html
@@ -21,7 +21,7 @@
     <div class="chat-box">
         <button class="reconnect fas fa-sync-alt"></button>
         <div class="messages"></div>
-        <form class="user-input">
+        <form class="user-input" action="/">
             <span class="input-carrot">> </span>
             <input type="text" placeholder="Input a username">
             <input type="submit" value="Send">
