--- a/app/client/index.html
+++ b/app/client/index.html
@@ -27,13 +27,15 @@
 
 <body>
     <div class="chat-box">
-        <button class="reconnect fas fa-sync-alt"></button>
         <div class="messages"></div>
         <form class="user-input" action="/">
             <span class="input-carrot">> </span>
             <input type="text" placeholder="Input a username">
             <input type="submit" value="Send">
         </form>
+    	<div class="mobile-menu">
+    	    <button class="reconnect fas fa-sync-alt"></button>
+    	</div>
     </div>
 </body>
 <script src="index.js"></script>
