--- a/app/client/index.html
+++ b/app/client/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#11a3e1"> -->
 </head>
 
-<body>
+<body ontouchstart>
     <div class="chat-box">
         <div class="messages"></div>
         <form class="user-input" action="/">
