Implement dark-mode

--- a/app/client/index.html
+++ b/app/client/index.html
@@ -35,9 +35,14 @@
         </form>
         <div class="mobile-menu">
             <button class="reconnect fas fa-sync-alt"></button>
+            <div class="dark-mode-wrapper">
+                Mode
+                <input class="dark-mode-checkbox" type="checkbox">
+            </div>
         </div>
     </div>
 </body>
+<script src="lib/bodyScrollLock.min.js"></script>
 <script src="index.js"></script>
 
 </html>
